# curve-voting-lib

./: README.md  pyproject.toml
contracts/0x7a1f2f99b65f6c3b2413648c86c0326cff8d8837/: abi.json  contract.vy
notebooks/: set_admin_percentage.ipynb  update_tricrypto2_parameters.ipynb
proposal_drafts/: llamalendv2_optimsm_admin_fee _increase.md
rough/: calldata_hover.html  decode_vote.py
scripts/llamalend-v2/: set_admin_percentage.py
scripts/tricrypto/: update_parameters.py
tests/: test_preview.py
voting/: context.py  create_vote.py
voting/xgov/: chains.py
