[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


[project]
name = "curve-voting-lib"
version = "0.1.0"
authors = [
    { name = "mo", email = "moanonresearch@gmail.com" },
]
description = "A Python package to simplify the creation, validation and simulation of Curve DAO votes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "titanoboa==0.2.8",
    "python-dotenv>=1.0.0",
    "hexbytes>=0.3.0",
    "requests>=2.32.4",
]

[tool.hatch.build.targets.wheel]
packages = ["voting"]